# TOTP-MVP

./: .dockerignore  .env.example  .env.vps.example  .gitignore  Dockerfile  README.md  docker-compose.vps.yml  docker-compose.yml  pyproject.toml
radius/: dictionary
sql/: 001_schema.sql
src/radius_totp/: __init__.py  ad.py  auth.py  cli.py  config.py  crypto.py  local_auth.py  radius_server.py  storage.py  totp.py
tests/: test_auth.py  test_config.py  test_crypto.py  test_local_auth.py  test_totp.py
